--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -L",
+    "start": "src/index.js",
     "test": "mocha -w ./tests/**/*.spec.js",
     "web": "npm start"
   },
