--- a/api/package.json
+++ b/api/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "src/index.js",
+    "start": "nodemon -L",
     "test": "mocha -w ./tests/**/*.spec.js",
-    "web": "npm start"
+    "web": "npm start",
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
   },
   "author": "Henry",
   "license": "ISC",
