--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "nodemon -L",
     "test": "mocha -w ./tests/**/*.spec.js",
-    "web": "npm start",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
+    "start:dev": "nodemon index.js"
   },
   "author": "Henry",
   "license": "ISC",
