--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "src/index.js",
     "test": "mocha -w ./tests/**/*.spec.js",
     "start:dev": "nodemon index.js"
   },
