--- a/api/package.json
+++ b/api/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "src/index.js",
-    "test": "mocha -w ./tests/**/*.spec.js",
-    "start:dev": "nodemon index.js"
+    "start": "nodemon -L",
+    "test": "mocha -w ./tests/**/*.spec.js"
   },
   "author": "Henry",
   "license": "ISC",
